syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
	rpc hash(HashRequest) returns (HashResponse);
	rpc validate(ValidateRequest) returns (google.protobuf.BoolValue);
}

// Send request to be hashed
message HashRequest {
	int32 userId = 1;
	string password = 2;
}

// Return hashed password with salt as bytes
message HashResponse {
	int32 userId = 1;
	bytes hashedPassword = 2;
	bytes salt = 3;
}

// Check if password/id is valid, returns a bool
message ValidateRequest {
	string password = 1;
	bytes hashedPassword = 2;
	bytes salt = 3;
}